// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component renders 1`] = `
@media  {
  .c-dMeHjX {
    background: none;
    border: none;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    height: var(--sizes-5);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-gZZKZD {
    flex-shrink: 0;
    display: flex;
    width: 100%;
    overflow-x: auto;
  }

  .c-gZZKZD::-webkit-scrollbar {
    display: none;
  }

  .c-gZZKZD {
    scrollbar-width: none;
  }

  .c-cWMaKf {
    flex-grow: 1;
    font-family: var(--fonts-body);
  }

  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }
}

@media  {
  .c-dMeHjX-cNMtxb-theme-light[data-state="active"] {
    color: var(--colors-primary);
    font-weight: 600;
    letter-spacing: -0.005em;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-dMeHjX-cNMtxb-theme-light[data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-dMeHjX-cNMtxb-theme-light:not([data-disabled]):hover {
    color: var(--colors-primary);
    background: rgba(15, 103, 245, 0.1);
  }

  .c-dMeHjX-cNMtxb-theme-light:not([data-disabled]):active {
    color: var(--colors-primary);
    background: rgba(15, 103, 245, 0.2);
    box-shadow: none;
  }

  .c-dMeHjX-cNMtxb-theme-light[data-disabled],
  .c-dMeHjX-cNMtxb-theme-light[data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: not-allowed;
  }

  .c-gZZKZD-eFavRf-theme-light {
    border-bottom: 1px solid var(--colors-tonal300);
  }

  .c-cWMaKf-fwFiEo-theme-light {
    color: var(--colors-textForeground);
  }

  .c-fixGjY-ixnjYu-theme-light {
    color: var(--colors-primary);
  }
}

<div>
  <div
    class="c-fixGjY c-fixGjY-ixnjYu-theme-light"
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="c-gZZKZD c-gZZKZD-eFavRf-theme-light"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-2-content-tab1"
        aria-selected="true"
        class="c-dMeHjX c-dMeHjX-cNMtxb-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-2-trigger-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Trigger 1
      </button>
      <button
        aria-controls="radix-2-content-tab2"
        aria-selected="false"
        class="c-dMeHjX c-dMeHjX-cNMtxb-theme-light"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-2-trigger-tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Trigger 2
      </button>
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab1"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-2-content-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-2-trigger-tab2"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-2-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs component renders mobile view 1`] = `
@media  {
  .c-dMeHjX {
    background: none;
    border: none;
    cursor: pointer;
    flex-shrink: 0;
    font-family: var(--fonts-body);
    padding: var(--space-4);
    height: var(--sizes-5);
    -webkit-user-select: none;
    user-select: none;
    transition: 0.3s;
  }

  .c-gZZKZD {
    flex-shrink: 0;
    display: flex;
    width: 100%;
    overflow-x: auto;
  }

  .c-gZZKZD::-webkit-scrollbar {
    display: none;
  }

  .c-gZZKZD {
    scrollbar-width: none;
  }

  .c-cWMaKf {
    flex-grow: 1;
    font-family: var(--fonts-body);
  }

  .c-fixGjY {
    display: flex;
    flex-direction: column;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-fDwKcF {
    position: absolute;
    transition: all 125ms;
  }
}

@media  {
  .c-dMeHjX-cNMtxb-theme-light[data-state="active"] {
    color: var(--colors-primary);
    font-weight: 600;
    letter-spacing: -0.005em;
    box-shadow: inset 0 -2px 0 0 currentColor;
  }

  .c-dMeHjX-cNMtxb-theme-light[data-state="inactive"] {
    color: var(--colors-tonal500);
  }

  .c-dMeHjX-cNMtxb-theme-light:not([data-disabled]):hover {
    color: var(--colors-primary);
    background: rgba(15, 103, 245, 0.1);
  }

  .c-dMeHjX-cNMtxb-theme-light:not([data-disabled]):active {
    color: var(--colors-primary);
    background: rgba(15, 103, 245, 0.2);
    box-shadow: none;
  }

  .c-dMeHjX-cNMtxb-theme-light[data-disabled],
  .c-dMeHjX-cNMtxb-theme-light[data-disabled]:hover {
    color: var(--colors-tonal200);
    cursor: not-allowed;
  }

  .c-gZZKZD-eFavRf-theme-light {
    border-bottom: 1px solid var(--colors-tonal300);
  }

  .c-cWMaKf-fwFiEo-theme-light {
    color: var(--colors-textForeground);
  }

  .c-fixGjY-ixnjYu-theme-light {
    color: var(--colors-primary);
  }

  .c-fDzwZw-kMhpXP-size-lg {
    height: var(--sizes-5);
    width: var(--sizes-5);
  }

  .c-dbrbZt-fLGGKn-size-lg {
    height: var(--sizes-3);
    width: var(--sizes-3);
    stroke-width: 2;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-fDwKcF-hVkDAC-theme-light {
    background: rgba(255, 255, 255, 0.8) !important;
  }

  .c-fDwKcF-ejYaUA-visible-false {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
  }
}

@media  {
  .c-fDzwZw-cmVfvW-cv {
    background: transparent;
    color: var(--colors-primary);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):hover,
  .c-fDzwZw-cmVfvW-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-cmVfvW-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-cmVfvW-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-dhzjXW-icmpvrW-css {
    position: relative;
  }

  .c-fDwKcF-icezigA-css {
    left: 0;
  }

  .c-fDwKcF-iczsSGP-css {
    right: 0;
  }
}

<div>
  <div
    class="c-fixGjY c-fixGjY-ixnjYu-theme-light"
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      class="c-dhzjXW c-dhzjXW-icmpvrW-css"
    >
      <button
        aria-label="Scroll Left"
        class="c-fDzwZw c-fDzwZw-kMhpXP-size-lg c-fDzwZw-cmVfvW-cv c-PJLV c-fDwKcF c-fDwKcF-hVkDAC-theme-light c-fDwKcF-ejYaUA-visible-false c-fDwKcF-icezigA-css"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="14 18 8 12 14 6 14 6"
          />
        </svg>
      </button>
      <div
        aria-orientation="horizontal"
        class="c-gZZKZD c-gZZKZD-eFavRf-theme-light"
        data-orientation="horizontal"
        role="tablist"
        style="outline: none;"
        tabindex="0"
      >
        <button
          aria-controls="radix-5-content-tab1"
          aria-selected="true"
          class="c-dMeHjX c-dMeHjX-cNMtxb-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="active"
          id="radix-5-trigger-tab1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Trigger 1 which is going to be long
        </button>
        <button
          aria-controls="radix-5-content-tab2"
          aria-selected="false"
          class="c-dMeHjX c-dMeHjX-cNMtxb-theme-light"
          data-orientation="horizontal"
          data-radix-collection-item=""
          data-state="inactive"
          id="radix-5-trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Trigger 2 which is going to be even longer
        </button>
      </div>
      <button
        aria-label="Scroll right"
        class="c-fDzwZw c-fDzwZw-kMhpXP-size-lg c-fDzwZw-cmVfvW-cv c-PJLV c-fDwKcF c-fDwKcF-hVkDAC-theme-light c-fDwKcF-ejYaUA-visible-false c-fDwKcF-iczsSGP-css"
        data-state="closed"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-fLGGKn-size-lg c-dbrbZt-iPJLV-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="10 6 16 12 10 18 10 18"
          />
        </svg>
      </button>
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab1"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="active"
      id="radix-5-content-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Important content for tab 1
    </div>
    <div
      aria-labelledby="radix-5-trigger-tab2"
      class="c-cWMaKf c-cWMaKf-fwFiEo-theme-light"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-5-content-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
